move jvm config to pom file, (not working in jvm.config file)